# ATAS

./: 01_bayesian_winrate_model.py  03_montecarlo_equity_simulations.py  data_ingestion.py  initial_capital_handler.py  pyproject.toml  readme.md
antiguo/: 00.py  00_AI.py  00_win_ruin_risk_without_historial.py  01.py  README.md  config.py  equity_simulation.py  load_data.py  trades_hist.csv
antiguo/notebooks/: 00_ruin_risk_without_historial.ipynb  01.ipynb  03.ipynb  04.ipynb  bayesian_model.py  equity_curve_simulator.ipynb  kelly_model.py  main.py  streak_analysis.py  utils.py
antiguo/output/: trades_hist.csv  trading_summary.csv
antiguo/trading_analysis_app/: bayesian_model.py  config.py  excel_ingestion.py  load_data.py  main.py  process_trades.py  utils.py
core/: __init__.py  capital.py  config.py  fifo_loader.py  io_utils.py  kelly_simulator_v2.py  kelly_simulator_v3.py  kelly_simulator_v4.py  kelly_simulator_v5.py  merger.py  pipeline.py  qa.py  statistics.py  summary.py
notebooks/: 00.ipynb  00_estrategia_SL_TP.ipynb  01_estrategia_SL_TP.ipynb  02_volatilidad.ipynb  03_riesgoxtrade.ipynb  README.md  arq_overview.ipynb  gld_1m.parquet  kelly_analysis.ipynb  kelly_simulator.ipynb  main.py  qqq_1m.parquet  readme.ipynb  setup.py
notebooks/output/: oo_overview.ipynb
output/: trades_hist.csv  trading_summary.csv
src/core/: __init__.py  capital_state.py  cli.py  config.py  db_utils.py  global_state.py  kelly_analysis.py  kelly_simulator.py  kelly_simulator_v3.py  kelly_simulator_v4.py  merger.py  qa.py  (+8 more)
tests/: test_utils.py
trading_env/: pyvenv.cfg
(+30 files in other folders)
